force-app/main/default/objects/FundingPropertyDetail__c/FundingPropertyDetail__c.object-meta.xml
<CustomObject>
    <description>Details of relevant property including number of rooms etc. Used as to store details for properties as they relate to the award rather than general address details</description>
    <label>Funding Property Detail</label>
    <nameField>
        <displayFormat>PTY-{000000}</displayFormat>
        <label>Funding Property Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Funding Property Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>