force-app/main/default/objects/FundingPropertyDetail__c/fields/ABS_Batch__c.field-meta.xml
<CustomField>
    <fullName>ABS_Batch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ABS Batch</label>
    <referenceTo>FundingBatch__c</referenceTo>
    <relationshipLabel>Funding Property Details</relationshipLabel>
    <relationshipName>Funding_Property_Details</relationshipName>
    <type>Lookup</type>
</CustomField>