force-app/main/default/objects/FundingPropertyDetail__c/fields/Address_County__c.field-meta.xml
<CustomField>
    <fullName>Address_County__c</fullName>
    <label>Address County</label>
    <length>50</length>
    <type>Text</type>
</CustomField>