force-app/main/default/objects/FundingPropertyDetail__c/fields/Address_First_Line__c.field-meta.xml
<CustomField>
    <fullName>Address_First_Line__c</fullName>
    <formula>Related_Address__r.Street</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Property Address (First Line)</label>
    <type>Text</type>
</CustomField>