force-app/main/default/objects/FundingPropertyDetail__c/fields/Address_Postcode__c.field-meta.xml
<CustomField>
    <fullName>Address_Postcode__c</fullName>
    <formula>Related_Address__r.PostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Postcode</label>
    <type>Text</type>
</CustomField>