force-app/main/default/objects/FundingPropertyDetail__c/fields/Address_Town__c.field-meta.xml
<CustomField>
    <fullName>Address_Town__c</fullName>
    <formula>Related_Address__r.City</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Town</label>
    <type>Text</type>
</CustomField>