force-app/main/default/objects/FundingPropertyDetail__c/fields/Address_UPRN__c.field-meta.xml
<CustomField>
    <fullName>Address_UPRN__c</fullName>
    <formula>Related_Address__r.Address_UPRN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UPRN</label>
    <type>Text</type>
</CustomField>