force-app/main/default/objects/FundingPropertyDetail__c/fields/Ancillary_non_measure_cost_for_this_pr__c.field-meta.xml
<CustomField>
    <fullName>Ancillary_non_measure_cost_for_this_pr__c</fullName>
    <label>Ancillary (non-measure) cost for this pr</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>