force-app/main/default/objects/FundingPropertyDetail__c/fields/Award_Name_Text__c.field-meta.xml
<CustomField>
    <fullName>Award_Name_Text__c</fullName>
    <description>Formula field used to retrieve the name of the related Funding Award. This can then be used in Flow datatables for examples.</description>
    <formula>Funding_Award__r.Name</formula>
    <label>Award Name Text</label>
    <type>Text</type>
</CustomField>