force-app/main/default/objects/FundingPropertyDetail__c/fields/Baseline__c.field-meta.xml
<CustomField>
    <fullName>Baseline__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Baseline that this property has been allocated to</description>
    <label>Baseline</label>
    <referenceTo>FundingBaseline__c</referenceTo>
    <relationshipLabel>Property Details</relationshipLabel>
    <relationshipName>Funding_Property_Details</relationshipName>
    <type>Lookup</type>
</CustomField>