force-app/main/default/objects/FundingPropertyDetail__c/fields/DL_ID__c.field-meta.xml
<CustomField>
    <fullName>DL_ID__c</fullName>
    <externalId>true</externalId>
    <label>Data Load ID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>