force-app/main/default/objects/FundingPropertyDetail__c/fields/EPC_Inspection_Date__c.field-meta.xml
<CustomField>
    <fullName>EPC_Inspection_Date__c</fullName>
    <label>EPC Inspection Date</label>
    <type>Date</type>
</CustomField>