force-app/main/default/objects/FundingPropertyDetail__c/fields/Financial_Year__c.field-meta.xml
<CustomField>
    <fullName>Financial_Year__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Time Period object. Record Type Financial Year</description>
    <label>Financial Year</label>
    <referenceTo>Time_Period__c</referenceTo>
    <relationshipLabel>Funding Property Details (Financial Year)</relationshipLabel>
    <relationshipName>Funding_Property_Details_FY</relationshipName>
    <type>Lookup</type>
</CustomField>