force-app/main/default/objects/FundingPropertyDetail__c/fields/Funding_Award__c.field-meta.xml
<CustomField>
    <fullName>Funding_Award__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Grant fund that will be financing any required work</description>
    <label>Funding Award</label>
    <referenceTo>FundingAward</referenceTo>
    <relationshipLabel>Funding Property Details</relationshipLabel>
    <relationshipName>Property_Details</relationshipName>
    <type>Lookup</type>
</CustomField>