force-app/main/default/objects/FundingPropertyDetail__c/fields/Funding_Award_Non_User_Participant__c.field-meta.xml
<CustomField>
    <fullName>Funding_Award_Non_User_Participant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup via junction object to Installer details</description>
    <label>Funding Award Non-User Participant</label>
    <referenceTo>Funding_Award_Non_User_Participant__c</referenceTo>
    <relationshipLabel>Funding Property Details</relationshipLabel>
    <relationshipName>Funding_Property_Details</relationshipName>
    <type>Lookup</type>
</CustomField>