force-app/main/default/objects/FundingPropertyDetail__c/fields/Has_occupant_been_issued_a_PN__c.field-meta.xml
<CustomField>
    <fullName>Has_occupant_been_issued_a_PN__c</fullName>
    <label>Has occupant been issued a PN</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>