force-app/main/default/objects/FundingPropertyDetail__c/fields/Household_eligibility_pathway__c.field-meta.xml
<CustomField>
    <fullName>Household_eligibility_pathway__c</fullName>
    <inlineHelpText>Which eligibility pathway did the property follow?
1. Income Deciles 1-2 of the Indices of Multiple Deprivation (IMD:ID 1-2)​
2. Means-tested benefit or Route 2 of ECO Flex
3. Low income threshold</inlineHelpText>
    <label>Household eligibility pathway</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pathway 1</fullName>
            </value>
            <value>
                <fullName>Pathway 2</fullName>
            </value>
            <value>
                <fullName>Pathway 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>