force-app/main/default/objects/FundingPropertyDetail__c/fields/Installed_Measures__c.field-meta.xml
<CustomField>
    <fullName>Installed_Measures__c</fullName>
    <description>Comma delimited list of measures installed for this property (excludes Additional Capital Expenditure)</description>
    <label>Installed Measures</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>