force-app/main/default/objects/FundingPropertyDetail__c/fields/Installer__c.field-meta.xml
<CustomField>
    <fullName>Installer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Installer</label>
    <referenceTo>FundingAwardParticipant</referenceTo>
    <relationshipLabel>Funding Property Details</relationshipLabel>
    <relationshipName>Funding_Property_Details</relationshipName>
    <type>Lookup</type>
</CustomField>