force-app/main/default/objects/FundingPropertyDetail__c/fields/Landlord_contact_number__c.field-meta.xml
<CustomField>
    <fullName>Landlord_contact_number__c</fullName>
    <label>Landlord contact number</label>
    <type>Phone</type>
</CustomField>