force-app/main/default/objects/FundingPropertyDetail__c/fields/Manual_Address_Verified__c.field-meta.xml
<CustomField>
    <fullName>Manual_Address_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manual Address Verified</label>
    <type>Checkbox</type>
</CustomField>