force-app/main/default/objects/FundingPropertyDetail__c/fields/Manually_Entered_Address__c.field-meta.xml
<CustomField>
    <fullName>Manually_Entered_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manually Entered Address</label>
    <type>Checkbox</type>
</CustomField>