force-app/main/default/objects/FundingPropertyDetail__c/fields/Measures_installed_on_previous_HUG_or_LG__c.field-meta.xml
<CustomField>
    <fullName>Measures_installed_on_previous_HUG_or_LG__c</fullName>
    <inlineHelpText>Has the property had measures installed as part on any previous HUG or LG schemes.</inlineHelpText>
    <label>Measures installed on previous HUG or LG</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>