force-app/main/default/objects/FundingPropertyDetail__c/fields/Occupant_Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>Occupant_Contact_Number__c</fullName>
    <label>Occupant Contact Number</label>
    <type>Phone</type>
</CustomField>