force-app/main/default/objects/FundingPropertyDetail__c/fields/Occupant_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Occupant_Email_Address__c</fullName>
    <label>Occupant Email Address</label>
    <type>Email</type>
</CustomField>