force-app/main/default/objects/FundingPropertyDetail__c/fields/On_or_Off_Gas_Grid_Property__c.field-meta.xml
<CustomField>
    <fullName>On_or_Off_Gas_Grid_Property__c</fullName>
    <inlineHelpText>Whether the property is on or off the gas grid. The home is off gas grid if it does not use mains gas for heating purposes.</inlineHelpText>
    <label>On or Off Gas Grid Property</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>On-gas grid</fullName>
            </value>
            <value>
                <fullName>Off-gas grid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>