force-app/main/default/objects/FundingPropertyDetail__c/fields/Phase__c.field-meta.xml
<CustomField>
    <fullName>Phase__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links to Time Period object record type phase</description>
    <label>Phase</label>
    <referenceTo>Time_Period__c</referenceTo>
    <relationshipLabel>Funding Property Details</relationshipLabel>
    <relationshipName>Funding_Property_Details</relationshipName>
    <type>Lookup</type>
</CustomField>