force-app/main/default/objects/FundingPropertyDetail__c/fields/Plot_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Plot_Identifier__c</fullName>
    <label>Plot Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>