force-app/main/default/objects/FundingPropertyDetail__c/fields/Post_Installation_SAP_certificate_number__c.field-meta.xml
<CustomField>
    <fullName>Post_Installation_SAP_certificate_number__c</fullName>
    <label>Post Installation SAP certificate number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>