force-app/main/default/objects/FundingPropertyDetail__c/fields/Post_Installation_SAP_Score__c.field-meta.xml
<CustomField>
    <fullName>Post_Installation_SAP_Score__c</fullName>
    <inlineHelpText>Enter the SAP score (from 0 to 100+) of the property after all measures were installed. This must be the SAP score taken from the property&apos;s updated EPC, not a score from modelled data</inlineHelpText>
    <label>Post Installation SAP Score</label>
    <length>255</length>
    <type>Text</type>
</CustomField>