force-app/main/default/objects/FundingPropertyDetail__c/fields/Pre_Installation_Heating_Fuel_Source__c.field-meta.xml
<CustomField>
    <fullName>Pre_Installation_Heating_Fuel_Source__c</fullName>
    <inlineHelpText>Indicates the main space heating source of the premises prior to installation of measures.</inlineHelpText>
    <label>Pre-Installation Heating Fuel Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gas</fullName>
            </value>
            <value>
                <fullName>Electricity</fullName>
            </value>
            <value>
                <fullName>Bulk LPG</fullName>
            </value>
            <value>
                <fullName>Bottled LPG</fullName>
            </value>
            <value>
                <fullName>Oil</fullName>
            </value>
            <value>
                <fullName>Coal</fullName>
            </value>
            <value>
                <fullName>Biomass</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>