force-app/main/default/objects/FundingPropertyDetail__c/fields/Pre_Installation_SAP_certificate_number__c.field-meta.xml
<CustomField>
    <fullName>Pre_Installation_SAP_certificate_number__c</fullName>
    <inlineHelpText>EPC Certificate number (has SAP score on it)</inlineHelpText>
    <label>Pre-Installation SAP certificate number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>