force-app/main/default/objects/FundingPropertyDetail__c/fields/Pre_Installation_SAP_Score__c.field-meta.xml
<CustomField>
    <fullName>Pre_Installation_SAP_Score__c</fullName>
    <inlineHelpText>Enter the SAP score (from 0 to 100+) of the property before any measures were installed</inlineHelpText>
    <label>Pre-Installation SAP Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>