force-app/main/default/objects/FundingPropertyDetail__c/fields/Property_Address__c.field-meta.xml
<CustomField>
    <fullName>Property_Address__c</fullName>
    <formula>Related_Address__r.Street+&quot;, &quot;+Related_Address__r.City+&quot;, &quot;+Related_Address__r.State+&quot;, &quot;+Related_Address__r.PostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Property Address</label>
    <type>Text</type>
</CustomField>