force-app/main/default/objects/FundingPropertyDetail__c/fields/Property_Archetype__c.field-meta.xml
<CustomField>
    <fullName>Property_Archetype__c</fullName>
    <label>Property Archetype</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Terraced</fullName>
            </value>
            <value>
                <fullName>Semi-detached</fullName>
            </value>
            <value>
                <fullName>Detached</fullName>
            </value>
            <value>
                <fullName>Bungalow</fullName>
            </value>
            <value>
                <fullName>Parkhome</fullName>
            </value>
            <value>
                <fullName>Low rise Flat (1-2 story)</fullName>
            </value>
            <value>
                <fullName>Medium Rise Flat (3-5 story)</fullName>
            </value>
            <value>
                <fullName>High rise Flat (6+ story)</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>