force-app/main/default/objects/FundingPropertyDetail__c/fields/Related_Address__c.field-meta.xml
<CustomField>
    <fullName>Related_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Address</label>
    <referenceTo>Address</referenceTo>
    <relationshipLabel>Funding Property Details</relationshipLabel>
    <relationshipName>Property_Details</relationshipName>
    <type>Lookup</type>
</CustomField>