force-app/main/default/objects/FundingPropertyDetail__c/fields/Status_Of_Home__c.field-meta.xml
<CustomField>
    <fullName>Status_Of_Home__c</fullName>
    <label>Status of Home</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>KPI 1</fullName>
            </value>
            <value>
                <fullName>KPI 2</fullName>
            </value>
            <value>
                <fullName>KPI 3</fullName>
            </value>
            <value>
                <fullName>KPI 4</fullName>
            </value>
            <value>
                <fullName>KPI 5</fullName>
            </value>
            <value>
                <fullName>CLARIFICATION NEEDED</fullName>
                <isActive>false</isActive>
                <label>CLARIFICATION NEEDED</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>