force-app/main/default/objects/FundingPropertyDetail__c/fields/Tenure_Type__c.field-meta.xml
<CustomField>
    <fullName>Tenure_Type__c</fullName>
    <inlineHelpText>Please provide the type of tenure.</inlineHelpText>
    <label>Tenure Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Owner Occupied</fullName>
            </value>
            <value>
                <fullName>Private Rented</fullName>
            </value>
            <value>
                <fullName>Social Rented</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>