force-app/main/default/objects/FundingPropertyDetail__c/fields/TM_Address_Response__c.field-meta.xml
<CustomField>
    <fullName>TM_Address_Response__c</fullName>
    <description>Details of address held by TM and returned by API</description>
    <label>TM Address Response</label>
    <length>150</length>
    <type>Text</type>
</CustomField>