force-app/main/default/objects/FundingPropertyDetail__c/fields/TM_lad_Code__c.field-meta.xml
<CustomField>
    <fullName>TM_lad_Code__c</fullName>
    <label>TM lad Code</label>
    <length>18</length>
    <type>Text</type>
</CustomField>