force-app/main/default/objects/FundingPropertyDetail__c/fields/TM_Owner__c.field-meta.xml
<CustomField>
    <fullName>TM_Owner__c</fullName>
    <description>Owner details provided bt Trustmark</description>
    <label>TM Owner</label>
    <length>150</length>
    <type>Text</type>
</CustomField>