force-app/main/default/objects/FundingPropertyDetail__c/fields/TM_Owner_Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>TM_Owner_Contact_Number__c</fullName>
    <description>t</description>
    <label>TM Owner Contact Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>