force-app/main/default/objects/FundingPropertyDetail__c/fields/TM_Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>TM_Owner_Email__c</fullName>
    <label>TM Owner Email</label>
    <length>50</length>
    <type>Text</type>
</CustomField>