force-app/main/default/objects/FundingPropertyDetail__c/fields/TM_Post_Installation_EPC__c.field-meta.xml
<CustomField>
    <fullName>TM_Post_Installation_EPC__c</fullName>
    <formula>IF(TM_Post_Installation_SAP_Score_Max__c &gt;= 92, &quot;A&quot;,
IF(TM_Post_Installation_SAP_Score_Max__c &gt;= 81, &quot;B&quot;,
IF(TM_Post_Installation_SAP_Score_Max__c &gt;= 69, &quot;C&quot;,
IF(TM_Post_Installation_SAP_Score_Max__c &gt;= 55, &quot;D&quot;,
IF(TM_Post_Installation_SAP_Score_Max__c &gt;= 39, &quot;E&quot;,
IF(TM_Post_Installation_SAP_Score_Max__c &gt;= 21, &quot;F&quot;,
IF(TM_Post_Installation_SAP_Score_Max__c &gt;= 0, &quot;G&quot;, &quot;&quot;)))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TM Post Installation EPC</label>
    <type>Text</type>
</CustomField>