force-app/main/default/objects/FundingPropertyDetail__c/fields/TM_Post_Installation_SAP_Score_Max__c.field-meta.xml
<CustomField>
    <fullName>TM_Post_Installation_SAP_Score_Max__c</fullName>
    <label>TM Post Installation SAP Score Max</label>
    <summarizedField>Property_Measure__c.TM_Post_Installation_SAP_Score__c</summarizedField>
    <summaryForeignKey>Property_Measure__c.Property_Detail__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>