force-app/main/default/objects/FundingPropertyDetail__c/fields/TM_Postcode__c.field-meta.xml
<CustomField>
    <fullName>TM_Postcode__c</fullName>
    <description>Postcode returned by TM API</description>
    <label>TM Postcode</label>
    <length>15</length>
    <type>Text</type>
</CustomField>