force-app/main/default/objects/FundingPropertyDetail__c/fields/TM_Pre_Installation_SAP_Score_Min__c.field-meta.xml
<CustomField>
    <fullName>TM_Pre_Installation_SAP_Score_Min__c</fullName>
    <label>TM Pre Installation SAP Score Min</label>
    <summarizedField>Property_Measure__c.TM_Pre_Installation_SAP_Score__c</summarizedField>
    <summaryForeignKey>Property_Measure__c.Property_Detail__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>