force-app/main/default/objects/FundingPropertyDetail__c/fields/TM_Project_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>TM_Project_Reference_Number__c</fullName>
    <inlineHelpText>TrustMark Project Reference Number</inlineHelpText>
    <label>TM Project Reference Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>