force-app/main/default/objects/FundingPropertyDetail__c/fields/TM_Property_Age__c.field-meta.xml
<CustomField>
    <fullName>TM_Property_Age__c</fullName>
    <label>TM Property Age</label>
    <length>18</length>
    <type>Text</type>
</CustomField>