force-app/main/default/objects/FundingPropertyDetail__c/fields/TM_Property_Bedrooms__c.field-meta.xml
<CustomField>
    <fullName>TM_Property_Bedrooms__c</fullName>
    <description>Number of property bedrooms returned from Trustmark</description>
    <label>TM Property Bedrooms</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>