force-app/main/default/objects/FundingPropertyDetail__c/fields/TM_Property_Construction__c.field-meta.xml
<CustomField>
    <fullName>TM_Property_Construction__c</fullName>
    <description>Property Construction field returned from Trustmark</description>
    <label>TM Property Construction</label>
    <length>255</length>
    <type>Text</type>
</CustomField>