force-app/main/default/objects/FundingPropertyDetail__c/fields/TM_Property_Detachment__c.field-meta.xml
<CustomField>
    <fullName>TM_Property_Detachment__c</fullName>
    <label>TM Property Detachment</label>
    <length>150</length>
    <type>Text</type>
</CustomField>