force-app/main/default/objects/FundingPropertyDetail__c/fields/TM_Property_Type__c.field-meta.xml
<CustomField>
    <fullName>TM_Property_Type__c</fullName>
    <description>Property type returned from Trustmark</description>
    <label>TM Property Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>