force-app/main/default/objects/FundingPropertyDetail__c/fields/TM_Resident__c.field-meta.xml
<CustomField>
    <fullName>TM_Resident__c</fullName>
    <label>TM Resident</label>
    <length>150</length>
    <type>Text</type>
</CustomField>