force-app/main/default/objects/FundingPropertyDetail__c/fields/TM_Resident_Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>TM_Resident_Contact_Number__c</fullName>
    <label>TM Resident Contact Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>