force-app/main/default/objects/FundingPropertyDetail__c/fields/TM_Resident_Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>TM_Resident_Mobile_Number__c</fullName>
    <label>TM Resident Mobile Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>