force-app/main/default/objects/FundingPropertyDetail__c/fields/TM_Tenure_Type__c.field-meta.xml
<CustomField>
    <fullName>TM_Tenure_Type__c</fullName>
    <label>TM Tenure Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>