force-app/main/default/objects/FundingPropertyDetail__c/fields/TM_UPRN__c.field-meta.xml
<CustomField>
    <fullName>TM_UPRN__c</fullName>
    <description>UPRN from TM to match To Trustmark</description>
    <label>TM UPRN</label>
    <length>15</length>
    <type>Text</type>
</CustomField>