force-app/main/default/objects/FundingPropertyDetail__c/fields/Total_cost_of_all_measures__c.field-meta.xml
<CustomField>
    <fullName>Total_cost_of_all_measures__c</fullName>
    <description>Roll-up summary of child fields</description>
    <label>Total cost of all measures</label>
    <summarizedField>Property_Measure__c.Total_Cost_of_Single_Measure_Installatio__c</summarizedField>
    <summaryForeignKey>Property_Measure__c.Property_Detail__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>