force-app/main/default/objects/FundingPropertyDetail__c/fields/Total_count_of_all_measures_1__c.field-meta.xml
<CustomField>
    <fullName>Total_count_of_all_measures_1__c</fullName>
    <description>Roll-up summary of child fields</description>
    <label>Total Count of all measures</label>
    <summaryFilterItems>
        <field>Property_Measure__c.TM_Measure_Type__c</field>
        <operation>notEqual</operation>
        <value>Additional Capital Expenditure</value>
    </summaryFilterItems>
    <summaryForeignKey>Property_Measure__c.Property_Detail__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>