force-app/main/default/objects/FundingPropertyDetail__c/fields/Triggering_OS_Candidate_Address__c.field-meta.xml
<CustomField>
    <fullName>Triggering_OS_Candidate_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Triggering OS Candidate Address</label>
    <referenceTo>OS_Candidate_Address__c</referenceTo>
    <relationshipLabel>Funding Property Details</relationshipLabel>
    <relationshipName>Funding_Property_Details</relationshipName>
    <type>Lookup</type>
</CustomField>